// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LedgerReview > should render for unvote and vote transaction 1`] = `
<div>
  <div
    class="flex items-center space-x-4 py-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Unvote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="-my-2 flex-1"
        >
          <div
            class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
          >
            <div
              class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-8 w-8 text-sm ring-0 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
              >
                <img
                  alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                  title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
            </div>
            <div
              class="ml-4 w-28 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="flex items-center space-x-4 border-dashed border-theme-secondary-300 dark:border-theme-secondary-800 border-t py-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Vote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="-my-2 flex-1"
        >
          <div
            class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
          >
            <div
              class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-8 w-8 text-sm ring-0 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
              >
                <img
                  alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                  title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
            </div>
            <div
              class="ml-4 w-28 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-dark-700 sm:border rounded-xl mt-0 sm:mt-2"
      >
        <div
          class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
              data-testid="AmountSection"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Amount
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Fee
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Total
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full flex-col bg-theme-secondary-300 px-6 py-3 dark:bg-theme-secondary-800"
        >
          <div
            class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 w-auto !leading-4 sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 lowercase !leading-4 sm:text-sm"
            >
              ~10s
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerReview > should render for unvote transaction 1`] = `
<div>
  <div
    class="flex items-center space-x-4 py-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Unvote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="-my-2 flex-1"
        >
          <div
            class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
          >
            <div
              class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-8 w-8 text-sm ring-0 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
              >
                <img
                  alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                  title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
            </div>
            <div
              class="ml-4 w-28 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-dark-700 sm:border rounded-xl mt-0 sm:mt-2"
      >
        <div
          class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
              data-testid="AmountSection"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Amount
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Fee
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Total
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full flex-col bg-theme-secondary-300 px-6 py-3 dark:bg-theme-secondary-800"
        >
          <div
            class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 w-auto !leading-4 sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 lowercase !leading-4 sm:text-sm"
            >
              ~10s
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`LedgerReview > should render for vote transaction 1`] = `
<div>
  <div
    class="flex items-center space-x-4 py-4 sm:py-6 no-ligatures"
    data-testid="TransactionDetail"
  >
    <div
      class="w-40 flex-1 space-y-2 whitespace-nowrap"
      data-testid="TransactionDetail--desktop"
    >
      <div
        class="no-ligatures text-sm font-semibold text-theme-secondary-500 dark:text-theme-secondary-700"
      >
        Vote
      </div>
      <div
        class="flex items-center font-semibold"
      >
        <div
          class="-my-2 flex-1"
        >
          <div
            class="flex items-center border-b border-dashed border-theme-secondary-300 py-4 last:border-b-0 dark:border-theme-secondary-800"
          >
            <div
              class="relative inline-flex items-center justify-center rounded align-middle transition-all duration-100 h-8 w-8 text-sm ring-0 ring-theme-background shrink-0"
              data-testid="Avatar"
            >
              <div
                class="inline-flex h-full w-full items-center justify-center overflow-hidden align-middle rounded"
              >
                <img
                  alt="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                  src="data:image/svg+xml;utf8,%3Csvg%20xmlns%3D%22http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg%22%20width%3D%22100%22%20height%3D%22100%22%20viewBox%3D%220%200%20100%20100%22%3E%3Crect%20width%3D%22100%22%20height%3D%22100%22%20fill%3D%22%23EF7C6D%22%2F%3E%3C%2Fsvg%3E"
                  title="0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6"
                />
              </div>
            </div>
            <div
              class="ml-4 w-28 flex-1"
            >
              <div
                class="flex overflow-hidden whitespace-nowrap items-center space-x-2 w-full"
              >
                <span
                  class="font-semibold text-base text-theme-text"
                  data-testid="Address__alias"
                >
                  <span
                    class="no-ligatures transition-colors duration-200"
                    data-testid="TruncateEnd"
                  >
                    Test Username
                  </span>
                </span>
                <span
                  class="no-ligatures min-w-0 overflow-hidden text-theme-secondary-500 dark:text-theme-secondary-700 font-semibold text-base"
                  data-testid="Address__address"
                >
                  0xcd15953dD076e56Dc6a5bc46Da23308Ff3158EE6
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    class="mt-2"
  >
    <div
      data-testid="DetailWrapper"
    >
      <div
        class="border-l-2 border-x-theme-primary-400 bg-theme-secondary-100 px-3 py-2 dark:bg-black sm:border-none sm:bg-transparent sm:p-0 dark:sm:bg-transparent"
        data-testid="DetailLabel"
      >
        <div
          class="no-ligatures min-w-24 font-semibold text-theme-secondary-700 dark:text-theme-secondary-500 text-md leading-5"
          data-testid="DetailLabelText"
        >
          Transaction Summary
        </div>
      </div>
      <div
        class="overflow-hidden rounded-xl border-theme-secondary-300 dark:border-theme-dark-700 sm:border rounded-xl mt-0 sm:mt-2"
      >
        <div
          class="w-full break-words p-3 sm:px-6 sm:py-5 [.condensed_&]:sm:py-4"
        >
          <div
            class="flex flex-col gap-3"
          >
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
              data-testid="AmountSection"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Amount
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Fee
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
            <div
              class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
            >
              <div
                class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 sm:text-base sm:leading-5 w-auto sm:min-w-36"
              >
                Total
              </div>
              <div
                class="flex flex-row items-center gap-2"
              >
                <span
                  class="whitespace-nowrap font-semibold"
                  data-testid="Amount"
                >
                  0 ARK
                </span>
              </div>
            </div>
          </div>
        </div>
        <div
          class="flex w-full flex-col bg-theme-secondary-300 px-6 py-3 dark:bg-theme-secondary-800"
        >
          <div
            class="flex items-center justify-between space-x-2 sm:justify-start sm:space-x-0"
          >
            <div
              class="no-ligatures flex-shrink-0 text-sm font-semibold leading-[17px] text-theme-secondary-700 dark:text-theme-secondary-500 w-auto !leading-4 sm:min-w-36 sm:text-sm"
            >
              Confirmation Time
            </div>
            <div
              class="flex flex-row items-center gap-2 lowercase !leading-4 sm:text-sm"
            >
              ~10s
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
